--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,15 @@
 # https://yamlchecker.com/
 services:
-   directus:
-    container_name: devmachine2_directus_container
+   directusBase:
+    container_name: devmachine_directusbase_container
     image: directus/directus:11.1.0
     ports:
       - 8055:8055
     environment:
-      KEY: 5e96244a-5248-455e-83c8-213785dd63f2
-      SECRET: f841de64-7a27-474e-a293-a416124a3486
+      KEY: 8b0d72c7-026b-4d92-8b82-75f6eea8e8ac
+      SECRET: fff1235e-a751-4fd4-9f6d-883203be2d6f
       DB_CLIENT: "mysql"
-      DB_HOST: "mysql"
+      DB_HOST: "host.docker.internal"
       DB_PORT: "3306"
       DB_DATABASE: "nf"
       DB_USER: "admin"
@@ -17,8 +17,50 @@ services:
       ADMIN_EMAIL: "admin@example.com"
       ADMIN_PASSWORD: "mysqlpassword"
     volumes:
-      - ./directus_uploads:/directus/uploads
-      - ./directus_extensions:/directus/extensions
+      - ./devmachine_directusbase_container_extensions:/directus/extensions
+      - ./devmachine_directusbase_containers_uploads:/directus/uploads
+    networks:
+      - nf_network
+   directusMockUnlimit:
+    container_name: devmachine_directusMockUnlimit_container
+    image: directus/directus:11.1.0
+    ports:
+      - 8056:8056
+    environment:
+      KEY: 5678fb02-ca61-4b0c-a8dd-08b84c393cdb
+      SECRET: 5ecaefe3-adc3-4453-97dc-20ef385e09c3
+      DB_CLIENT: "mysql"
+      DB_HOST: "host.docker.internal"
+      DB_PORT: "3306"
+      DB_DATABASE: "mockunlimit"
+      DB_USER: "admin"
+      DB_PASSWORD: "mysqlpassword"
+      ADMIN_EMAIL: "admin@example.com"
+      ADMIN_PASSWORD: "mysqlpassword"
+    volumes:
+      - ./devmachine_directusmockunlimit_container_extensions:/directus/extensions
+      - ./devmachine_directusmockunlimit_container_uploads:/directus/uploads
+    networks:
+      - nf_network
+   directusMockConnectpay:
+    container_name: devmachine_directusMockConnectpay_container
+    image: directus/directus:11.1.0
+    ports:
+      - 8057:8057
+    environment:
+      KEY: c4ecb521-885a-4e69-89ae-ff9779521dc8
+      SECRET: 893050f7-4491-48bf-a39a-d78cc408d48c
+      DB_CLIENT: "mysql"
+      DB_HOST: "host.docker.internal"
+      DB_PORT: "3306"
+      DB_DATABASE: "mockconnectpay"
+      DB_USER: "admin"
+      DB_PASSWORD: "mysqlpassword"
+      ADMIN_EMAIL: "admin@example.com"
+      ADMIN_PASSWORD: "mysqlpassword"
+    volumes:
+      - ./devmachine_directusmockconnectpay_container_extensions:/directus/extensions
+      - ./devmachine_directusmockconnectpay_container_uploads:/directus/uploads
     networks:
       - nf_network 
 networks:
